--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "effects": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "effects"
+    }
+  },
+  "defaultProject": "effects",
+  "cli": {
+    "analytics": "bab924c0-3fa7-4d87-adbc-658f05081561"
+  }
 }
